--- a/index.html
+++ b/index.html
@@ -291,3 +291,240 @@
                                 <span class="tech-tag">P2P</span>
                             </div>
                             <button class="project-btn">View Details</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Project Modal (reused script.js modal) -->
+        <div id="projectModal" class="modal">
+            <div class="modal-content">
+                <span class="close-button">&times;</span>
+                <div class="modal-body">
+                    <div class="modal-header">
+                        <h2 id="modalTitle"></h2>
+                        <div id="modalTech" class="modal-tech"></div>
+                    </div>
+                    <div id="modalDescription" class="modal-description"></div>
+                    <div id="modalFeatures" class="modal-features"></div>
+                    <div class="modal-actions">
+                        <a id="modalGithub" href="#" target="_blank" rel="noopener" class="btn btn-primary">
+                            <i class="fab fa-github"></i> View on GitHub
+                        </a>
+                        <a id="modalDemo" href="#" target="_blank" rel="noopener" class="btn btn-secondary">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Experience -->
+        <section id="experience" class="experience">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Professional Experience</h2>
+                    <p class="section-subtitle">Career journey</p>
+                </div>
+
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-header">
+                                <h3>Junior Cisco Cybersecurity Engineer (Training)</h3>
+                                <span class="timeline-date">Apr 2024 – Oct 2024</span>
+                            </div>
+                            <div class="timeline-company">
+                                <i class="fas fa-building"></i>
+                                DEPI by Ministry of Communications &amp; IT — Egypt
+                            </div>
+                            <ul class="timeline-achievements">
+                                <li>Completed training covering Cisco CyberOps and CCNA routing & switching fundamentals</li>
+                                <li>Participated in cybersecurity tasks and operations as part of the program</li>
+                                <li>Gained hands-on experience with network troubleshooting and basic SOC workflows</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-header">
+                                <h3>Trainee — ITI & Aerospace Trainings</h3>
+                                <span class="timeline-date">Jul 2023 – Sep 2023</span>
+                            </div>
+                            <div class="timeline-company">
+                                <i class="fas fa-university"></i>
+                                Information Technology Institute (ITI) & Cairo University Aerospace Dept
+                            </div>
+                            <ul class="timeline-achievements">
+                                <li>Web development (MERN), Linux fundamentals and Bash basics at ITI</li>
+                                <li>CubeSat engineering training at Cairo University — embedded and hardware work</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-header">
+                                <h3>Bachelor of Navigation Science &amp; Space Technology</h3>
+                                <span class="timeline-date">Sep 2021 – Aug 2026</span>
+                            </div>
+                            <div class="timeline-company">
+                                <i class="fas fa-university"></i>
+                                Beni-Suef University
+                            </div>
+                            <ul class="timeline-achievements">
+                                <li>Specialization with computing and embedded systems exposure</li>
+                                <li>Active in student activities and project work</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Blog (placeholder) -->
+        <section id="blog" class="blog">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Latest Insights</h2>
+                    <p class="section-subtitle">Thoughts on offensive security & tooling</p>
+                </div>
+                <div class="blog-grid">
+                    <article class="blog-card">
+                        <div class="blog-image"><i class="fas fa-shield-virus"></i></div>
+                        <div class="blog-content">
+                            <div class="blog-meta">
+                                <span class="blog-date">Coming Soon</span>
+                                <span class="blog-category">Offensive</span>
+                            </div>
+                            <h3>Practical Pentesting: Building a Test Lab</h3>
+                            <p>How to quickly stand up an isolated lab for safe pentesting and exploit practice.</p>
+                            <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </article>
+                    <article class="blog-card">
+                        <div class="blog-image"><i class="fas fa-network-wired"></i></div>
+                        <div class="blog-content">
+                            <div class="blog-meta">
+                                <span class="blog-date">Coming Soon</span>
+                                <span class="blog-category">Tools</span>
+                            </div>
+                            <h3>Nmap Recipes for Fast Recon</h3>
+                            <p>Useful Nmap flags and workflows for reconnaissance during pentests.</p>
+                            <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact -->
+        <section id="contact" class="contact">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title">Get In Touch</h2>
+                    <p class="section-subtitle">Let's collaborate on security engagements or internships</p>
+                </div>
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
+                            <div>
+                                <h4>Email</h4>
+                                <a href="mailto:kerogabra977@gmail.com">kerogabra977@gmail.com</a>
+                            </div>
+                        </div>
+
+                        <div class="contact-item">
+                            <i class="fas fa-phone"></i>
+                            <div>
+                                <h4>Phone</h4>
+                                <a href="tel:+201116828381">+20 111 682 8381</a>
+                            </div>
+                        </div>
+
+                        <div class="contact-item">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div>
+                                <h4>Location</h4>
+                                <p>Cairo, Egypt</p>
+                            </div>
+                        </div>
+
+                        <div class="contact-social">
+                            <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin"></i></a>
+                            <a href="#" target="_blank" rel="noopener" class="social-link"><i class="fab fa-github"></i></a>
+                        </div>
+
+                        <div class="info-card" style="margin-top:1rem;">
+                            <h3>Certificates & Links</h3>
+                            <p><a href="https://drive.google.com/drive/folders/1ZXEx19f5SvdhZuDGK6jCrveq-KX7Knxc" target="_blank" rel="noopener">Certificates & coursework</a></p>
+                        </div>
+                    </div>
+
+                    <form id="contactForm" class="contact-form">
+                        <div class="form-group">
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="name" required />
+                            <span class="error-message" id="nameError"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="email" required />
+                            <span class="error-message" id="emailError"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <input type="text" id="subject" name="subject" required />
+                            <span class="error-message" id="subjectError"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                            <span class="error-message" id="messageError"></span>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-paper-plane"></i> Send Message</button>
+                        <div id="formSuccess" class="success-message"></div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p>&copy; 2025 KeroGabra. All rights reserved.</p>
+                    <p>Jr Cybersecurity Engineer | Offensive Security</p>
+                </div>
+                <div class="footer-social">
+                    <a href="mailto:kerogabra977@gmail.com" class="social-link" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a" class="social-link" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="#" class="social-link" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="tel:+201116828381" class="social-link" aria-label="Phone"><i class="fas fa-phone"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Keep original script.js for interactivity -->
+    <script src="script.js"></script>
+
+    <!-- small inline tweaks (optional) to ensure brand text -->
+    <script>
+        // Update document title and profile references dynamically if needed
+        document.title = "KeroGabra — Jr Cybersecurity Engineer";
+    </script>
+</body>
+</html>
