--- a/index.html
+++ b/index.html
@@ -6,26 +6,7 @@
     <title>KeroGabra — Jr Cybersecurity Engineer</title>
     <meta name="description" content="KeroGabra — Jr Cybersecurity Engineer specializing in offensive security, pentesting and vulnerability assessment." />
     <link rel="stylesheet" href="style.css" />
-    <!-- override theme variables for a 'more offensive / red-team' vibe -->
-    <style>
-        :root{
-            --accent-primary: #ff0044;
-            --accent-secondary: #a8002a;
-            --accent-tertiary: #330011;
-            --gradient-primary: linear-gradient(135deg, #ff0044 0%, #8b0000 100%);
-            --gradient-secondary: linear-gradient(135deg, #120006 0%, #2a0008 100%);
-            --shadow-light: rgba(255,0,68,0.08);
-            --shadow-medium: rgba(168,0,42,0.18);
-        }
-        body.light-mode {
-            --accent-primary: #d93b4b;
-            --accent-secondary: #b02b36;
-            --gradient-primary: linear-gradient(135deg,#d93b4b 0%,#b02b36 100%);
-        }
-        /* make avatar look more "offensive" */
-        .avatar-placeholder { font-size: 5.5rem; color: var(--accent-primary); border-color: rgba(255,0,68,0.9); }
-        .nav-logo a { color: var(--accent-primary); font-family: "Inter", monospace; letter-spacing: .6px; }
-    </style>
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,7 +14,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
-    <!-- Navigation -->
     <header class="header">
         <nav class="nav">
             <div class="nav-container">
@@ -62,7 +42,6 @@
     </header>
 
     <main>
-        <!-- Hero -->
         <section id="hero" class="hero">
             <div class="container">
                 <div class="hero-content">
@@ -83,16 +62,14 @@
                         </div>
                         <div class="hero-social">
                             <a href="mailto:kerogabra977@gmail.com" class="social-link" aria-label="Email"><i class="fas fa-envelope"></i></a>
-                            <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a" class="social-link" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                            <!-- GitHub link left generic; update if you have one -->
-                            <a href="#" class="social-link" target="_blank" rel="noopener" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a0" class="social-link" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/KeroGabra" class="social-link" target="_blank" rel="noopener" aria-label="GitHub"><i class="fab fa-github"></i></a>
                             <a href="tel:+201116828381" class="social-link" aria-label="Phone"><i class="fas fa-phone"></i></a>
                         </div>
                     </div>
                     <div class="hero-visual">
                         <div class="hero-avatar">
                             <div class="avatar-placeholder">
-                                <!-- skull icon to emphasize offensive/red-team vibe -->
                                 <i class="fas fa-skull-crossbones"></i>
                             </div>
                         </div>
@@ -101,7 +78,6 @@
             </div>
         </section>
 
-        <!-- About -->
         <section id="about" class="about">
             <div class="container">
                 <div class="section-header">
@@ -123,16 +99,16 @@
 
                         <div class="about-stats">
                             <div class="stat">
-                                <span class="stat-number">—</span>
+                                <span class="stat-number">2+</span>
                                 <span class="stat-label">Active Offensive Projects</span>
                             </div>
                             <div class="stat">
-                                <span class="stat-number">—</span>
+                                <span class="stat-number">10+</span>
                                 <span class="stat-label">Red Team Tools Practiced</span>
                             </div>
                             <div class="stat">
-                                <span class="stat-number">—</span>
-                                <span class="stat-label">Ongoing Certifications</span>
+                                <span class="stat-number">4</span>
+                                <span class="stat-label">Completed Certifications</span>
                             </div>
                         </div>
                     </div>
@@ -156,7 +132,6 @@
             </div>
         </section>
 
-        <!-- Skills -->
         <section id="skills" class="skills">
             <div class="container">
                 <div class="section-header">
@@ -256,7 +231,6 @@
             </div>
         </section>
 
-        <!-- Projects -->
         <section id="projects" class="projects">
             <div class="container">
                 <div class="section-header">
@@ -297,7 +271,6 @@
             </div>
         </section>
 
-        <!-- Project Modal (reused script.js modal) -->
         <div id="projectModal" class="modal">
             <div class="modal-content">
                 <span class="close-button">&times;</span>
@@ -320,7 +293,6 @@
             </div>
         </div>
 
-        <!-- Experience -->
         <section id="experience" class="experience">
             <div class="container">
                 <div class="section-header">
@@ -387,7 +359,6 @@
             </div>
         </section>
 
-        <!-- Blog (placeholder) -->
         <section id="blog" class="blog">
             <div class="container">
                 <div class="section-header">
@@ -423,7 +394,6 @@
             </div>
         </section>
 
-        <!-- Contact -->
         <section id="contact" class="contact">
             <div class="container">
                 <div class="section-header">
@@ -457,8 +427,8 @@
                         </div>
 
                         <div class="contact-social">
-                            <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" target="_blank" rel="noopener" class="social-link"><i class="fab fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a0" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://github.com/KeroGabra" target="_blank" rel="noopener" class="social-link"><i class="fab fa-github"></i></a>
                         </div>
 
                         <div class="info-card" style="margin-top:1rem;">
@@ -500,7 +470,6 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -510,18 +479,16 @@
                 </div>
                 <div class="footer-social">
                     <a href="mailto:kerogabra977@gmail.com" class="social-link" aria-label="Email"><i class="fas fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a" class="social-link" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-link" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/kyrillos-gabra-9285981a0" class="social-link" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/KeroGabra" class="social-link" target="_blank" rel="noopener" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="tel:+201116828381" class="social-link" aria-label="Phone"><i class="fas fa-phone"></i></a>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- Keep original script.js for interactivity -->
     <script src="script.js"></script>
 
-    <!-- small inline tweaks (optional) to ensure brand text -->
     <script>
         // Update document title and profile references dynamically if needed
         document.title = "KeroGabra — Jr Cybersecurity Engineer";
